Add scarf analytics blog post

--- a/index.org
+++ b/index.org
@@ -23,6 +23,7 @@
 
 * Posts
 
+- [[file:posts/2020-06-10-analytics-and-open-source-sustainability.org][Analyics and Open Source Sustainability - July 10, 2020]]
 - [[https://medium.com/swlh/a-failed-effort-to-get-paid-for-an-open-source-project-bd7fa4658a1e][A Failed Effort to Get Paid for an Open Source Project - May 29, 2019]]
 - [[file:posts/2017-08-25-haskell-dbs-and-musicbrainz.org][Easy database access with Haskell and postgresql-simple - August 25, 2017]]
 - [[https://cocosci.princeton.edu/mike/CachingAlgorithms.pdf][Caching Algorithms and Rational Models of Memory - May, 2014]]
