--- a/index.org
+++ b/index.org
@@ -2,14 +2,13 @@
 #+options: num:nil toc:nil author:nil
 
 * About
-
+  
 - Software engineer, functional programming enthusiast
-- Founder and CEO of [[https://scarf.sh][Scarf]] - Helping open-source developers get paid and deliver better software
+- Founder and CEO of [[https://scarf.sh][Scarf]] - We help open-source developers get compensated for their work and deliver better software to their users. We help businesses more effectively leverage their open-source dependencies
 - Former engineer at Pandora. Among other things, I built a concert recommendation system with Songkick and Ticketfly integrations to help people find great concerts.
  
 * Projects 
   
-- [[https://scarf.sh][Scarf]] - Helping open-source developers get paid and deliver better software
 - [[https://github.com/aviaviavi/toodles][Toodles]] - Project management directly from the TODO's in your code
 - [[https://github.com/aviaviavi/curl-runnings][curl-runnings]] - a framework for quickly and correctly writing integration tests for json APIs and more
 - [[https://github.com/aviaviavi/confetti][Confetti]] - a simple configuration file swapping tool
