--- a/index.org
+++ b/index.org
@@ -6,14 +6,11 @@
 * About
   
 - Founder and CEO of [[https://scarf.sh][Scarf]] - Scarf helps open-source developers distribute their software with better observability and control. Scarf's distribution toolchain and analytics platform can help maintainers understand how their work is being used and connect with their commercial end-users.
-- Software engineer, functional programming enthusiast
+- Software engineer, functional programming enthusiast, open-source maintainer
 - Former engineer at Pandora. Among other things, I built a concert recommendation system with Songkick and Ticketfly integrations to help people find great concerts.
  
 * Other Projects 
   
-- [[https://github.com/aviaviavi/toodles][Toodles]] - Project management directly from the TODO's in your code
-- [[https://github.com/aviaviavi/curl-runnings][curl-runnings]] - a framework for quickly and correctly writing integration tests for json APIs and more
-- [[https://github.com/aviaviavi/confetti][Confetti]] - a simple configuration file swapping tool
 - [[https://tabdextension.com][Tabd]] - a chrome extension for sharing tabs. Give it a try!
  
 * Contact
