--- a/index.org
+++ b/index.org
@@ -5,19 +5,20 @@
 
 * About
   
-- Founder and CEO of [[https://scarf.sh][Scarf]] - Scarf is building advanced maintainer-friendly tools for open-source software distribution, analytics, and commercialization.
-- Software engineer, functional programming enthusiast, open-source maintainer
-- Former engineer at Pandora. Among other things, I built a concert recommendation system with Songkick and Ticketfly integrations to help people find great concerts.
- 
+  - Founder and CEO of [[https://scarf.sh][Scarf]] - Scarf is building advanced maintainer-friendly tools for open-source software distribution, analytics, and commercialization.
+  - Software engineer, functional programming enthusiast, open-source maintainer
+  - Former engineer at Pandora. Among other things, I built a concert recommendation system with Songkick and Ticketfly integrations to help people find great concerts.
+
 * Other Projects 
   
-- [[https://tabdextension.com][Tabd]] - a chrome extension for sharing tabs. Give it a try!
- 
+  - [[https://tabdextension.com][Tabd]] - a chrome extension for sharing tabs. Give it a try!
+
 * Contact
   
-- Follow me on [[https://twitter.com/avi_press][Twitter]], [[https://github.com/aviaviavi][Github]]
-- Ping me on [[https://keybase.io/aviaviavi][Keybase]]
-
+  - Follow me on [[https://twitter.com/avi_press][Twitter]], [[https://github.com/aviaviavi][Github]]
+  - Ping me on [[https://keybase.io/aviaviavi][Keybase]]
+  - I hold open office hours for anyone that you can book with me [[https://calendly.com/avi-press/office-hours][here]], no prior confirmation from me required.
+    
 * Content
 |------------------------------------------------------------------------------------------+-------------------|
 | [[https://some.engineering/podcasts/2022/03/08/measuring-open-source-adoption][Some Engineering Podcast: Measuring Open Source Adoption]]                                 | March 8, 2022     |
