--- a/index.org
+++ b/index.org
@@ -20,17 +20,22 @@
   - I hold open office hours for anyone that you can book with me [[https://calendly.com/avi-press/office-hours][here]], no prior confirmation from me required.
     
 * Content
-|------------------------------------------------------------------------------------------+-------------------|
-| [[https://some.engineering/podcasts/2022/03/08/measuring-open-source-adoption][Some Engineering Podcast: Measuring Open Source Adoption]]                                 | March 8, 2022     |
-| [[https://about.scarf.sh/post/standing-with-ukraine][Scarf Will Block Package Downloads from the Russian Government]]                           | March 2, 2022     |
-| [[https://podcast.chaoss.community/53][CHAOSSCast: Gathering Open Source Usage Data with Avi Press]]                              | February 25, 2022 |
-| [[https://about.scarf.sh/post/direct-downloads-via-scarf-gateway][Measuring Downloads of Anything You Distribute]]                                           | September 3, 2021 |
-| [[https://podcast.curiefense.io/15][Committing to Cloud Native Podcast: Analytics for Open Source Maintainers with Avi Press]] | June 28, 2021     |
-| [[https://podcast.sustainoss.org/70][Sustain OSS Podcast: Avi Press and Scarf]]                                                 | March 5, 2021     |
-| [[https://about.scarf.sh/post/announcing-scarf-gateway][Announcing The Scarf Gateway]]                                                             | March 3, 2021     |
-| [[https://about.scarf.sh/post/package-registries-and-open-source][Are Package Registries Holding Open-Source Hostage?]]                                      | July 10, 2020     |
-| [[https://github.com/aviaviavi/talks/blob/master/intro-to-parsers-2019-01/PITCHME.md][Introduction to Parsers in Haskell (slides)]]                                              | September 1, 2019 |
-| [[https://medium.com/swlh/a-failed-effort-to-get-paid-for-an-open-source-project-bd7fa4658a1e][A Failed Effort to Get Paid for an Open Source Project]]                                   | May 29, 2019      |
-| [[file:posts/2017-08-25-haskell-dbs-and-musicbrainz.org][Easy Database Access with Haskell and postgresql-simple]]                                  | August 25, 2017   |
-| [[https://cocosci.princeton.edu/mike/CachingAlgorithms.pdf][Caching Algorithms and Rational Models of Memory]]                                         | May, 2014         |
+|-----------------------------------------------------------------------------------------------------+-------------------|
+| [[https://www.youtube.com/watch?v=aKUJ0_n0KZ0&list=PLmyjALM1NE24x6-vPqfgnMWrymQddJHy6][PyCon 2022 Talk - Beyond the Download Count: Understanding the Usage of your Public Python Packages]] | April 29, 2022    |
+| [[https://some.engineering/podcasts/2022/03/08/measuring-open-source-adoption][Some Engineering Podcast: Measuring Open Source Adoption]]                                            | March 8, 2022     |
+| [[https://about.scarf.sh/post/standing-with-ukraine][Scarf Will Block Package Downloads from the Russian Government]]                                      | March 2, 2022     |
+| [[https://podcast.chaoss.community/53][CHAOSSCast: Gathering Open Source Usage Data with Avi Press]]                                         | February 25, 2022 |
+| [[https://www.emilyomier.com/podcast/making-data-transparent-and-accessible-with-avi-press][Cloud Native Startup Podcast: Making Data Transparent and Accessible]]                                | January 26, 2022  |
+| [[https://juniortosenior.io/67][Junior to Senior Podcast]]                                                                            | November 1, 2021  |
+| [[https://about.scarf.sh/post/direct-downloads-via-scarf-gateway][Measuring Downloads of Anything You Distribute]]                                                      | September 3, 2021 |
+| [[https://podcast.curiefense.io/15][Committing to Cloud Native Podcast: Analytics for Open Source Maintainers with Avi Press]]            | June 28, 2021     |
+| [[https://podcast.sustainoss.org/70][Sustain OSS Podcast: Avi Press and Scarf]]                                                            | March 5, 2021     |
+| [[https://about.scarf.sh/post/announcing-scarf-gateway][Announcing The Scarf Gateway]]                                                                        | March 3, 2021     |
+| [[https://www.coss.community/cossc/ocs-2020-breakout-avi-press-founder-and-ceo-of-scarf-63j][Open Core Summit: Fireside Chat with Joseph Jacks on OSS Analytics]]                                  | December 16, 2020 |
+| [[https://about.scarf.sh/post/package-registries-and-open-source][Are Package Registries Holding Open-Source Hostage?]]                                                 | July 10, 2020     |
+| [[https://github.com/aviaviavi/talks/blob/master/intro-to-parsers-2019-01/PITCHME.md][Introduction to Parsers in Haskell (slides)]]                                                         | September 1, 2019 |
+| [[https://podcastaddict.com/episode/https%3A%2F%2Ffeeds.soundcloud.com%2Fstream%2F639597036-user-410091210-open-source-case-study-reality-of-getting-paid-for-free-software.mp3&podcastId=3302482][Cloud2030 Podcast: Reality of Getting Paid for Free Software]]                                        | June 22, 2012     |
+| [[https://medium.com/swlh/a-failed-effort-to-get-paid-for-an-open-source-project-bd7fa4658a1e][A Failed Effort to Get Paid for an Open Source Project]]                                              | May 29, 2019      |
+| [[file:posts/2017-08-25-haskell-dbs-and-musicbrainz.org][Easy Database Access with Haskell and postgresql-simple]]                                             | August 25, 2017   |
+| [[https://cocosci.princeton.edu/mike/CachingAlgorithms.pdf][Caching Algorithms and Rational Models of Memory]]                                                    | May, 2014         |
  
