--- a/index.org
+++ b/index.org
@@ -21,14 +21,16 @@
     
 * Content
 |-------------------------------------------------------------------------------------------------------------------------------------+-------------------|
+| [[https://twit.tv/shows/floss-weekly/episodes/693?autostart=false][FLOSS Weekly Podcast]]                                                                                                                | August 10, 2022   |
 | [[https://www.youtube.com/watch?v=Yt_IgHZD4v4][The Secret Sauce: Who's Looking At Your GitHub Project? (YouTube)]]                                                                   | August 3, 2022    |
+| [[https://percona.podbean.com/e/data-collection-download-metrics-and-scarf-percona-database-podcast-77-w-avi-press/][Percona's HOSS Talks FOSS Podcast]]                                                                                                   | July 1, 2022      |
 | [[https://www.forbes.com/sites/forbestechcouncil/2022/06/01/distribution-and-the-economics-of-open-source-software][Distribution and the Economics of Open-Source Software (Forbes)]]                                                                     | June 1, 2022      |
 | [[https://www.youtube.com/watch?v=aKUJ0_n0KZ0&list=PLmyjALM1NE24x6-vPqfgnMWrymQddJHy6][PyCon 2022 Talk - Beyond the Download Count: Understanding the Usage of your Public Python Packages]]                                 | April 29, 2022    |
 | [[https://anchor.fm/ossstartuppodcast/episodes/E31-Understanding-Your-Open-Source-Usage-with-Scarf-e1honsa][Open Source Startup Podcast: Understanding Your Open Source Usage with Scarf]]                                                        | April 7, 2022     |
 | [[https://www.forbes.com/sites/forbestechcouncil/2022/04/06/uniting-to-act-on-untapped-leverage-how-open-source-maintainers-can-work-together-and-prioritize-long-term-sustainability][Uniting To Act On Untapped Leverage: How Open-Source Maintainers Can Work Together And Prioritize Long-Term Sustainability (Forbes)]] | April 6, 2022     |
 | [[https://www.youtube.com/watch?v=ZEo7JZb3Xpo][Cloud Native Containers Meetup - Beyond the Download: Understanding the Usage of Your Public Containers]]                             | March 22, 2022    |
 | [[https://about.scarf.sh/post/standing-with-ukraine][Scarf Will Block Package Downloads from the Russian Government]]                                                                      | March 2, 2022     |
-| [[https://podcast.chaoss.community/53][CHAOSSCast: Gathering Open Source Usage Data with Avi Press]]                                                                         | February 25, 2022 |
+| [[https://podcast.chaoss.community/53][CHAOSSCast:Gathering Open Source Usage Data with Avi Press]]                                                                         | February 25, 2022 |
 | [[https://www.emilyomier.com/podcast/making-data-transparent-and-accessible-with-avi-press][Cloud Native Startup Podcast: Making Data Transparent and Accessible]]                                                                | January 26, 2022  |
 | [[https://serokell.io/blog/how-scarf-uses-haskell][Serokell Blog Interview: Haskell in Production @ Scarf]]                                                                              | November 9, 2021  |
 | [[https://juniortosenior.io/67][Junior to Senior Podcast]]                                                                                                            | November 1, 2021  |
