--- a/index.org
+++ b/index.org
@@ -1,7 +1,7 @@
 #+title: Avi Press
 #+options: num:nil toc:nil author:nil
 #+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
-
+#+HTML_HEAD_EXTRA: <link rel="stylesheet" href="./css/styles.css">
 
 * About
   
