--- a/wilson-reunion.org
+++ b/wilson-reunion.org
@@ -3,17 +3,20 @@
 #+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="./css/styles.css">
 
+[[file:index.org][[Back to home]​]]
+
 *Reunion planning is underway and we need planning committee volunteers. Date TBD.*
   
 #+BEGIN_EXPORT html
-<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Favi.press%2Fposts%2Fpfbid09YVjUdgLeqh1tYeK8hicKEhJerManQTbeL36oZRMo8zmq2TGntvKJaSRRtTrr8j6l&show_text=true&width=500" width="500" height="277" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Favi.press%2Fposts%2Fpfbid09YVjUdgLeqh1tYeK8hicKEhJerManQTbeL36oZRMo8zmq2TGntvKJaSRRtTrr8j6l&show_text=true&width=350" width="350" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+<hr>
 #+END_EXPORT
 
 Please join us by getting in touch: [[mailto:mail@avi.press][mail@avi.press]]
 
 I'll be posting updates here. See you all soon!
 
-  -- Avi
+-- Avi
 
 #+BEGIN_EXPORT html
 <hr>
@@ -67,3 +70,4 @@ I'll be posting updates here. See you all soon!
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
 #+END_EXPORT
+
