--- a/index.org
+++ b/index.org
@@ -3,12 +3,14 @@
 #+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="./css/styles.css">
 
-* About
-  
-  - Founder and CEO of [[https://scarf.sh][Scarf]] - Scarf build advanced tools for open-source software distribution and analytics.
-  - Software engineer, functional programming enthusiast, open-source maintainer
-  - Former engineer at Pandora
+* About me
 
+  - Software engineer, functional programming enthusiast, open-source maintainer and advocate
+  - Founder and CEO of [[https://scarf.sh][Scarf]] - Scarf build advanced download and adoption metrics for open source software
+  - Former engineer at Pandora
+  - Based in Oakland, California
+  - This site is built with [[https://orgmode.org/][Org Mode]]. 
+    
 * Contact
   
   - Follow me on [[https://twitter.com/avi_press][Twitter]], [[https://github.com/aviaviavi][Github]]
@@ -17,8 +19,8 @@
    
 * Other things
   
-  - [[file:wilson-reunion.org][Wilson High School Class of 2010 Reunion]]
   - [[https://tabdextension.com][Tabd]] - a chrome extension for sharing tabs. Give it a try!
+  - [[file:wilson-reunion.org][Wilson High School Class of 2010 Reunion]]
     
 * Content
 |-------------------------------------------------------------------------------------------------------------------------------------+-------------------|
@@ -31,7 +33,7 @@
 | [[https://www.forbes.com/sites/forbestechcouncil/2022/04/06/uniting-to-act-on-untapped-leverage-how-open-source-maintainers-can-work-together-and-prioritize-long-term-sustainability][Uniting To Act On Untapped Leverage: How Open-Source Maintainers Can Work Together And Prioritize Long-Term Sustainability (Forbes)]] | April 6, 2022     |
 | [[https://www.youtube.com/watch?v=ZEo7JZb3Xpo][Cloud Native Containers Meetup - Beyond the Download: Understanding the Usage of Your Public Containers]]                             | March 22, 2022    |
 | [[https://about.scarf.sh/post/standing-with-ukraine][Scarf Will Block Package Downloads from the Russian Government]]                                                                      | March 2, 2022     |
-| [[https://podcast.chaoss.community/53][CHAOSSCast:Gathering Open Source Usage Data with Avi Press]]                                                                         | February 25, 2022 |
+| [[https://podcast.chaoss.community/53][CHAOSSCast:Gathering Open Source Usage Data with Avi Press]]                                                                          | February 25, 2022 |
 | [[https://www.emilyomier.com/podcast/making-data-transparent-and-accessible-with-avi-press][Cloud Native Startup Podcast: Making Data Transparent and Accessible]]                                                                | January 26, 2022  |
 | [[https://serokell.io/blog/how-scarf-uses-haskell][Serokell Blog Interview: Haskell in Production @ Scarf]]                                                                              | November 9, 2021  |
 | [[https://juniortosenior.io/67][Junior to Senior Podcast]]                                                                                                            | November 1, 2021  |
