--- a/wilson-reunion.org
+++ b/wilson-reunion.org
@@ -1,5 +1,5 @@
 #+title: Wilson High School Class of 2010 Reunion
-#+options: num:nil toc:nil author:nil
+#+options: num:nil toc:nil author:nil timestamp:nil
 #+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="./css/styles.css">
 #+SETUPFILE: ./stylish_white.theme
