Reunion link fix

--- a/wilson-reunion.org
+++ b/wilson-reunion.org
@@ -5,5 +5,4 @@
 
 [[file:index.org][[Back to home]​]]
 
-Join us on 8/19! [[https://www.eventbrite.com/manage/events/616238314387/details][Get your tickets here!]]
-
+Join us on 8/19! [[https://Wilson2010reunion.eventbrite.com][Get your tickets here!]]
