--- a/posts/2023-12-29-call-for-haskell-libraries.org
+++ b/posts/2023-12-29-call-for-haskell-libraries.org
@@ -16,7 +16,7 @@ The Haskell ecosystem needs more good libraries. This page will serve as my pers
 
 *A Clickhouse client*
 
-The existing solutions are some combination of incomplete, years out of date, or poorly designed. We've started working on our own at Scarf, but for the forseeable future it will only be very thin wrapper around the JSON API.
+The existing solutions are some combination of incomplete, years out of date, or poorly designed. We've started working on our own at Scarf, but for the foreseeable future it will only be very thin wrapper around the JSON API.
 
 *A Parquet serialization library*
 
