--- a/posts/2023-12-29-call-for-haskell-libraries.org
+++ b/posts/2023-12-29-call-for-haskell-libraries.org
@@ -29,3 +29,7 @@ It's been a while since I looked but I remember having a hard time with protobuf
 *A full analog for Rails/Django/etc*
 
 IHP is making great progress here, but I still list this because it's crucial and there's a still a long way to go before there's real feature parity here.
+
+*A phenomenal ORM.*
+
+All of the ORMs in Haskell leave something to be desired. They are thoughtful, but they are not phenomenal. Haskell's type system should make ORMs better, but they currently make them significantly cumbersome and hard to use. I think Haskell should boast one of the best ORMs of any language. This also means good support for databases besides PostgreSQL (I /love/ psql, to be clear, there are just situations that call for other databases.)
