--- a/posts/2023-12-29-call-for-haskell-libraries.org
+++ b/posts/2023-12-29-call-for-haskell-libraries.org
@@ -1,7 +1,7 @@
 #+title: Call for Haskell Libraries
 #+author: Avi Press
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="../css/styles.css">
-#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" href="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81">
+#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" href="">
 #+options: num:nil
 #+options: toc:nil
 #+OPTIONS: date:nil
@@ -10,6 +10,11 @@
 #+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="/images/dwarf-icon.png">
 
 [[file:../index.org][Avi Press]] | December 29, 2023
+
+#+BEGIN_EXPORT html
+<img src="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81"></img>
+#+END_EXPORT
+
 
 --
 
@@ -42,3 +47,4 @@ An increasing portion of web backends don't really require dealing with your own
 *Better Haskell API access to cabal*
 
 I've wanted to re-use their build planner / contraint manager but it wasn't made available. Maybe that's changed?
+
