--- a/posts/2020-06-10-analytics-and-open-source-sustainability.org
+++ b/posts/2020-06-10-analytics-and-open-source-sustainability.org
@@ -1,9 +1,12 @@
 #+title: Analytics and Open Source Sustainability
 #+options: num:nil toc:nil date:nil
-#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" href="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81">
 #+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="/images/dwarf-icon.png">
 
 [[file:../index.org][Avi Press]] | July 10, 2020
+
+#+BEGIN_EXPORT html
+<img referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81" />
+#+END_EXPORT
 
 ---
 
