--- a/index.org
+++ b/index.org
@@ -1,12 +1,11 @@
 #+title: Avi Press
 #+options: num:nil toc:nil author:nil timestamp:nil
-#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" href="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81">
 #+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="./css/styles.css">
 
-
 #+BEGIN_EXPORT html
 <img style="height:15rem;" src="./images/portrait.jpg"></img>
+<img referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81" />
 #+END_EXPORT
 
 * About me
