font update, footer

--- a/index.org
+++ b/index.org
@@ -1,6 +1,7 @@
 #+title: Avi Press
 #+options: num:nil toc:nil author:nil timestamp:nil
 #+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
+#+HTML_HEAD_EXTRA: <link rel='stylesheet' href="https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css">
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="./css/styles.css">
 
 #+BEGIN_EXPORT html
