--- a/posts/2023-12-29-call-for-haskell-libraries.org
+++ b/posts/2023-12-29-call-for-haskell-libraries.org
@@ -1,5 +1,6 @@
 #+title: Call for Haskell Libraries
 #+author: Avi Press
+#+HTML_HEAD_EXTRA: <link rel='stylesheet' href="https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css">
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="../css/styles.css">
 #+options: num:nil
 #+options: toc:nil
