--- a/posts/2017-08-25-haskell-dbs-and-musicbrainz.org
+++ b/posts/2017-08-25-haskell-dbs-and-musicbrainz.org
@@ -1,13 +1,8 @@
 #+title: Easy database access with Haskell and postgresql-simple
 #+author: Avi Press
-#+HTML_HEAD_EXTRA: <link rel='stylesheet' href="https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css">
+#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="../images/dwarf-icon.png">
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="../css/styles.css">
-#+options: num:nil
-#+options: toc:nil
-#+OPTIONS: date:nil
-#+options: <:nil
-#+options: num:nil toc:nil author:nil timestamp: nil
-#+HTML_HEAD_EXTRA: <link rel="icon" type="image/png" sizes="32x32" href="/images/dwarf-icon.png">
+#+HTML_HEAD_EXTRA: <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css">
 
 [[file:../index.org][Avi Press]] | August 25, 2017
 
